--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>管理者用 駐車場編集画面</title>
+<title>管理者用 駐車場編集</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="admin.css">
 </head>
