--- a/admin.html
+++ b/admin.html
@@ -2,12 +2,11 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>管理者用 駐車場編集</title>
+<title>管理者用 駐車場編集画面</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="admin.css">
 </head>
 <body>
-
 <h1>管理者用 駐車場編集画面</h1>
 
 <div id="controls">
@@ -21,6 +20,7 @@
 
 <input type="range" id="zoom-slider" min="0.5" max="2" step="0.01" value="1">
 
+<script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
 <script src="admin.js"></script>
 </body>
 </html>
