--- a/virtual.html
+++ b/virtual.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>駐車場 空き状況ナビ（ズーム対応・中心座標版）</title>
+<title>駐車場 空き状況ナビ</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
