--- a/admin.html
+++ b/admin.html
@@ -11,6 +11,7 @@
 
 <div id="controls">
   <button id="add-rod">ロッド追加</button>
+  <button id="add-road">通路追加</button>
   <button id="save-layout">保存 (JSON)</button>
 </div>
 
