--- a/virtual.html
+++ b/virtual.html
@@ -7,25 +7,15 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>駐車場 空き状況ナビ（ズーム対応・中心座標版）</h1>
-<div id="location">現在地を設定してください</div>
-<div id="orientation">向き：未取得</div>
-<button id="enable-orientation">方位センサを有効化</button>
-
-<div id="controller">
-  <button id="up">↑</button><br>
-  <button id="left">←</button>
-  <button id="down">↓</button>
-  <button id="right">→</button>
-</div>
-
-<input type="range" id="zoom-slider" min="0.5" max="2" step="0.01" value="1">
+<h1>駐車場 空き状況ナビ（ズーム・矢印ナビ）</h1>
 
 <div id="parking-lot-container">
   <div id="parking-lot"></div>
   <div id="user-marker"></div>
   <div id="heading-arrow"></div>
 </div>
+
+<input type="range" id="zoom-slider" min="0.5" max="2" step="0.01" value="1">
 
 <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
 <script src="virtual.js"></script>
