--- a/virtual.html
+++ b/virtual.html
@@ -15,6 +15,12 @@
   <div id="heading-arrow"></div>
 </div>
 
+<div id="controls">
+  <div></div><button class="move-btn" id="up">↑</button><div></div>
+  <button class="move-btn" id="left">←</button><div></div><button class="move-btn" id="right">→</button>
+  <div></div><button class="move-btn" id="down">↓</button><div></div>
+</div>
+
 <script src="virtual.js"></script>
 </body>
 </html>
