--- a/virtual.html
+++ b/virtual.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>駐車場 空き状況ナビ（通路沿いA*誘導）</title>
+<title>駐車場ナビ（通路沿いA*誘導 完全版）</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <style>
@@ -16,7 +16,8 @@
     font-size:16px;
     margin:2px;
   }
-  /* Canvasがロッドやユーザーの下に隠れないように */
+
+  /* Canvas を parking-lot と同期 */
   #path-canvas {
     position:absolute;
     top:0;
@@ -27,7 +28,7 @@
 </style>
 </head>
 <body>
-<h1>駐車場ナビ（青線経路誘導版）</h1>
+<h1>駐車場ナビ（青線経路誘導版 完全版）</h1>
 
 <div id="controller">
   <button id="up">↑</button><br>
@@ -36,11 +37,11 @@
   <button id="right">→</button>
 </div>
 
-<div id="parking-lot-container">
-  <div id="parking-lot"></div>
+<div id="parking-lot-container" style="position:relative; width:100%; max-width:600px; aspect-ratio:9/6.5; margin:auto; background:#bfbfbf;">
+  <div id="parking-lot" style="position:absolute; top:0; left:0; width:100%; height:100%;"></div>
   <canvas id="path-canvas"></canvas>
-  <div id="user-marker"></div>
-  <div id="heading-arrow"></div>
+  <div id="user-marker" style="position:absolute; width:14px; height:14px; background:#2196f3; border-radius:50%; border:2px solid white; z-index:2;"></div>
+  <div id="heading-arrow" style="position:absolute; width:2px; height:14px; background:red; z-index:3; transform-origin:bottom center;"></div>
 </div>
 
 <script src="virtual.js"></script>
