--- a/virtual.html
+++ b/virtual.html
@@ -2,9 +2,8 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>駐車場ナビ 完全修正版</title>
+<title>駐車場ナビ 完全版</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="style.css">
 <style>
 body { font-family:sans-serif; }
 
@@ -51,7 +50,7 @@ body { font-family:sans-serif; }
 </head>
 <body>
 
-<h2 style="text-align:center">駐車場ナビ（完全修正版）</h2>
+<h2 style="text-align:center">駐車場ナビ（完全版）</h2>
 
 <div id="parking-lot-container">
   <div id="parking-lot"></div>
