--- a/virtual.html
+++ b/virtual.html
@@ -5,7 +5,7 @@
 <title>駐車場ナビ 完全版</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
-body { font-family:sans-serif; }
+body { font-family:sans-serif; margin:0; background:#f0f0f0; }
 
 #parking-lot-container{
   width:90vw;
@@ -34,6 +34,7 @@ body { font-family:sans-serif; }
   font-weight:bold;
   color:white;
   border-radius:6px;
+  cursor:pointer;
 }
 .empty{ background:#4caf50; }
 .full{ background:#f44336; }
