--- a/admin.html
+++ b/admin.html
@@ -2,23 +2,28 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>管理者用 駐車場編集画面</title>
+<title>管理者用 駐車場編集画面（Canvas版）</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="admin.css">
+<style>
+body { margin:0; font-family:sans-serif; text-align:center; background:#cfcfcf; }
+h1 { margin:8px 0; }
+#controls { margin:10px 0; }
+button { padding:6px 10px; margin:2px; }
+#zoom-slider { width:80%; margin:6px auto; }
+#canvas-container { position:relative; margin:auto; width:90%; max-width:1200px; aspect-ratio:16/9; background:#bfbfbf; border-radius:10px; cursor:crosshair; }
+canvas { width:100%; height:100%; display:block; }
+</style>
 </head>
 <body>
-<h1>管理者用 駐車場編集画面</h1>
-
+<h1>管理者用 駐車場編集画面（Canvas版）</h1>
 <div id="controls">
   <button id="add-rod">ロッド追加</button>
-  <button id="save-layout">保存 (JSON)</button>
+  <button id="save-layout">保存</button>
 </div>
-
-<div id="parking-lot-container">
-  <div id="parking-lot"></div>
+<input type="range" id="zoom-slider" min="0.1" max="5" step="0.01" value="1">
+<div id="canvas-container">
+  <canvas id="parking-canvas"></canvas>
 </div>
-
-<input type="range" id="zoom-slider" min="0.5" max="2" step="0.01" value="1">
 
 <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
 <script src="admin.js"></script>
