--- a/admin.html
+++ b/admin.html
@@ -2,32 +2,24 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>管理者用 超大型駐車場編集画面</title>
+<title>管理者用 駐車場編集画面</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<style>
-body { margin:0; font-family:sans-serif; }
-#controls { padding:8px; background:#eee; display:flex; gap:8px; align-items:center; }
-button { padding:6px 10px; font-size:14px; }
-#canvas-container { width:100%; height:80vh; background:#cfcfcf; overflow:hidden; position:relative; }
-canvas { background:#bfbfbf; display:block; margin:auto; cursor:grab; }
-</style>
+<link rel="stylesheet" href="admin.css">
 </head>
 <body>
-
-<h1>管理者用 超大型駐車場編集画面</h1>
+<h1>管理者用 駐車場編集画面（自由設計）</h1>
 
 <div id="controls">
   <button id="add-rod">ロッド追加</button>
-  <button id="save-layout">保存</button>
-  <span>スクロールでズーム、右ドラッグでパン</span>
+  <button id="save-layout">保存 (JSON)</button>
+  <label>ズーム<input type="range" id="zoom-slider" min="0.1" max="5" step="0.01" value="1"></label>
 </div>
 
-<div id="canvas-container">
-  <canvas id="lotCanvas"></canvas>
+<div id="parking-lot-container">
+  <div id="parking-lot"></div>
 </div>
 
 <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
 <script src="admin.js"></script>
-
 </body>
 </html>
