--- a/admin.html
+++ b/admin.html
@@ -7,17 +7,24 @@
 <link rel="stylesheet" href="admin.css">
 </head>
 <body>
-<h1>管理者用 駐車場編集画面（自由設計）</h1>
+<h1>管理者用 駐車場編集画面</h1>
 
 <div id="controls">
   <button id="add-rod">ロッド追加</button>
   <button id="save-layout">保存 (JSON)</button>
-  <label>ズーム<input type="range" id="zoom-slider" min="0.1" max="5" step="0.01" value="1"></label>
+</div>
+
+<div id="lot-size-controls">
+  <label>幅(px): <input type="number" id="lot-width" value="2000"></label>
+  <label>高さ(px): <input type="number" id="lot-height" value="1000"></label>
+  <button id="apply-lot-size">反映</button>
 </div>
 
 <div id="parking-lot-container">
   <div id="parking-lot"></div>
 </div>
+
+<input type="range" id="zoom-slider" min="0.1" max="2" step="0.01" value="1">
 
 <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
 <script src="admin.js"></script>
