--- a/admin.html
+++ b/admin.html
@@ -10,21 +10,20 @@
 <h1>管理者用 駐車場編集画面</h1>
 
 <div id="controls">
+  <label>左上緯度: <input id="lat1" type="number" step="0.000001" value="35.0"></label>
+  <label>左上経度: <input id="lng1" type="number" step="0.000001" value="135.0"></label>
+  <label>右下緯度: <input id="lat2" type="number" step="0.000001" value="34.999"></label>
+  <label>右下経度: <input id="lng2" type="number" step="0.000001" value="135.002"></label>
+  <button id="set-parking">駐車場設定</button>
   <button id="add-rod">ロッド追加</button>
-  <button id="save-layout">保存 (JSON)</button>
-</div>
-
-<div id="lot-size-controls">
-  <label>幅(px): <input type="number" id="lot-width" value="2000"></label>
-  <label>高さ(px): <input type="number" id="lot-height" value="1000"></label>
-  <button id="apply-lot-size">反映</button>
+  <button id="save-layout">保存</button>
 </div>
 
 <div id="parking-lot-container">
   <div id="parking-lot"></div>
 </div>
 
-<input type="range" id="zoom-slider" min="0.1" max="2" step="0.01" value="1">
+<input type="range" id="zoom-slider" min="0.5" max="2" step="0.01" value="1">
 
 <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
 <script src="admin.js"></script>
