--- a/virtual.html
+++ b/virtual.html
@@ -10,7 +10,9 @@
 <h1>駐車場 空き状況ナビ</h1>
 
 <div id="parking-lot-container">
-  <div id="parking-lot"></div>
+  <div id="parking-lot">
+    <div id="parking-label">PARKING AREA</div>
+  </div>
 </div>
 
 <input type="range" id="zoom-slider" min="0.5" max="2" step="0.01" value="1">
