--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,9 @@
 <title>管理者用 駐車場編集画面</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="admin.css">
+<style>
+  #parking-lot-container { cursor: crosshair; } /* 十字カーソル */
+</style>
 </head>
 <body>
 <h1>管理者用 駐車場編集画面</h1>
