--- a/admin.html
+++ b/admin.html
@@ -5,20 +5,18 @@
 <title>管理者用 駐車場編集画面</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="admin.css">
-<style>
-  #parking-lot-container { cursor: crosshair; } /* 十字カーソル */
-</style>
 </head>
 <body>
 <h1>管理者用 駐車場編集画面</h1>
 
 <div id="controls">
-  <label>左上緯度: <input id="lat1" type="number" step="0.000001" value="35.0"></label>
-  <label>左上経度: <input id="lng1" type="number" step="0.000001" value="135.0"></label>
-  <label>右下緯度: <input id="lat2" type="number" step="0.000001" value="34.999"></label>
-  <label>右下経度: <input id="lng2" type="number" step="0.000001" value="135.002"></label>
+  <label>左上緯度: <input id="lat1" type="number" step="0.000001" value="38.16686"></label>
+  <label>左上経度: <input id="lng1" type="number" step="0.000001" value="140.86395"></label>
+  <label>右下緯度: <input id="lat2" type="number" step="0.000001" value="38.16616"></label>
+  <label>右下経度: <input id="lng2" type="number" step="0.000001" value="140.86528"></label>
   <button id="set-parking">駐車場設定</button>
   <button id="add-rod">ロッド追加</button>
+  <button id="add-node">ノード追加</button>
   <button id="save-layout">保存</button>
 </div>
 
@@ -26,7 +24,7 @@
   <div id="parking-lot"></div>
 </div>
 
-<input type="range" id="zoom-slider" min="0.5" max="2" step="0.01" value="1">
+<label>ズーム: <input type="range" id="zoom-slider" min="0.5" max="2" step="0.01" value="1"></label>
 
 <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
 <script src="admin.js"></script>
