--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,23 @@
   <button id="add-rod">ロッド追加</button>
   <button id="add-node">ノード追加</button>
   <button id="save-layout">保存</button>
+
+  <hr>
+
+<h3>ロッド一括整列配置</h3>
+
+<label>開始X(m): <input id="grid-start-x" type="number" value="10"></label>
+<label>開始Y(m): <input id="grid-start-y" type="number" value="10"></label><br>
+
+<label>列数: <input id="grid-cols" type="number" value="10"></label>
+<label>行数: <input id="grid-rows" type="number" value="4"></label><br>
+
+<label>横間隔(m): <input id="grid-gap-x" type="number" value="5"></label>
+<label>縦間隔(m): <input id="grid-gap-y" type="number" value="8"></label><br>
+
+<label>角度(deg): <input id="grid-angle" type="number" value="0"></label>
+
+<button id="generate-grid">整列配置</button>
 </div>
 
 <div id="parking-lot-container">
