--- a/admin.html
+++ b/admin.html
@@ -20,6 +20,21 @@
   <button id="save-layout">保存</button>
 
   <hr>
+<h3>選択ロッド操作</h3>
+<label>幅(m): <input id="selected-width" type="number" step="0.1" value="2.5"></label>
+<label>高さ(m): <input id="selected-height" type="number" step="0.1" value="5"></label>
+<button id="resize-selected">サイズ変更</button>
+<button id="delete-selected">削除</button>
+
+<hr>
+<h3>グループ操作</h3>
+<label>グループID: <input id="group-id" type="text" placeholder="例: G1234567890"></label>
+<label>幅(m): <input id="group-width" type="number" step="0.1" value="2.5"></label>
+<label>高さ(m): <input id="group-height" type="number" step="0.1" value="5"></label>
+<button id="resize-group">サイズ変更</button>
+<button id="delete-group">削除</button>
+
+  <hr>
 
 <h3>ロッド一括整列配置</h3>
 
