--- a/admin.html
+++ b/admin.html
@@ -20,6 +20,11 @@
   <button id="save-layout">保存</button>
 
   <hr>
+<h3>背景画像設定</h3>
+<input type="file" id="bg-file" accept="image/*">
+<button id="set-bg">背景設定</button>
+
+  <hr>
 <h3>選択ロッド操作</h3>
 <label>幅(m): <input id="selected-width" type="number" step="0.1" value="2.5"></label>
 <label>高さ(m): <input id="selected-height" type="number" step="0.1" value="5"></label>
