--- a/admin.html
+++ b/admin.html
@@ -57,6 +57,12 @@
   <label>高さ(m): <input id="group-height" type="number" step="0.1" value="5"></label>
   <button id="resize-group">サイズ変更</button>
   <button id="delete-group">削除</button>
+<hr>
+<h3>グループ微調整</h3>
+<label>角度(deg): <input id="group-rotate-angle" type="number" value="0"></label>
+<label>横間隔(m): <input id="group-gap-x" type="number" value="5"></label>
+<label>縦間隔(m): <input id="group-gap-y" type="number" value="5"></label>
+<button id="apply-group-adjust">適用</button>
 
   <hr>
   <h3>ロッド一括整列配置</h3>
