--- a/admin.html
+++ b/admin.html
@@ -35,6 +35,7 @@
 <label>角度(deg): <input id="grid-angle" type="number" value="0"></label>
 
 <button id="generate-grid">整列配置</button>
+<button id="delete-group">選択グループ削除</button>
 </div>
 
 <div id="parking-lot-container">
